@@ -32,8 +32,8 @@ dependencies {
     compile 'org.apache.poi:poi-ooxml:3.17'
     compile 'org.apache.poi:poi-ooxml-schemas:3.17'
     compile 'postgresql:postgresql:9.1-901-1.jdbc4'
-    compile 'org.springframework:spring-beans:5.2.6.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.6.RELEASE'
+    compile 'org.springframework:spring-beans:5.2.7.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.7.RELEASE'
     compile 'org.apache.xmlbeans:xmlbeans:3.1.0'
 
     compile fileTree(dir: 'lib', include: '*.jar')
